--- a/.github/workflows/process_documents.yml
+++ b/.github/workflows/process_documents.yml
@@ -23,7 +23,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install watchdog pypdf python-docx openpyxl python-pptx python-rtf
+        pip install watchdog
+        pip install ebooklib==0.18
+        pip install pypdf python-docx openpyxl python-pptx python-rtf
         
     - name: Create test documents directory
       run: |
