--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ matplotlib>=3.7.0
 scikit-learn>=1.3.0
 openpyxl>=3.1.2
 pandas>=2.0.0
-ebooklib>=1.0.0
+ebooklib==0.18
 python-pptx>=0.6.21
 python-rtf>=0.4.5
 lxml>=4.9.0 
